Fixed FAQ nav bug on smaller screens.

--- a/public_html/css/youngs_faq.css
+++ b/public_html/css/youngs_faq.css
@@ -62,7 +62,7 @@ header{
 }
 
 header nav{
-    width: calc(100% - 40px);
+    width: calc(100%);
     display: block;
     position: relative;
     margin-left: auto;
